# dmlite-hdfs-plugin

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  RELEASE-NOTES  cmake_install.cmake
cmake/.svn/: all-wcprops  entries
cmake/modules/.svn/: all-wcprops  entries
cmake/modules/.svn/text-base/: FindDMLite.cmake.svn-base  FindHadoop.cmake.svn-base
dmlite/tags/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_3_1/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_3_1/.svn/text-base/: CMakeLists.txt.svn-base  Doxyfile-man.in.svn-base  Doxyfile.in.svn-base
dmlite/tags/dmlite_0_3_1/etc/.svn/: all-wcprops  dir-prop-base  entries
dmlite/tags/dmlite_0_3_1/tests/: test-split_url.cpp
dmlite/tags/dmlite_0_3_1/tests/.svn/: all-wcprops  dir-prop-base  entries
dmlite/tags/dmlite_0_4_0/.svn/: all-wcprops  dir-prop-base  entries
dmlite/tags/dmlite_0_4_0/.svn/text-base/: CMakeLists.txt.svn-base  Doxyfile.in.svn-base
dmlite/tags/dmlite_0_4_0/cmake/.svn/: entries  (+1 more)
dmlite/tags/dmlite_0_4_0/etc/: dmlite.conf.in
dmlite/tags/dmlite_0_4_0/src/: CMakeLists.txt
dmlite/tags/dmlite_0_4_0/src/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_0/src/c/: CMakeLists.txt
dmlite/tags/dmlite_0_4_0/src/c/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_0/src/c/.svn/text-base/: IO-C.cpp.svn-base
dmlite/tags/dmlite_0_4_0/src/core/: PluginManager.cpp
dmlite/tags/dmlite_0_4_0/src/core/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_0/src/core/.svn/text-base/: CMakeLists.txt.svn-base  Operators.cpp.svn-base  StackInstance.cpp.svn-base
dmlite/tags/dmlite_0_4_0/src/core/builtin/.svn/: all-wcprops  dir-prop-base  entries
dmlite/tags/dmlite_0_4_0/src/core/builtin/.svn/text-base/: Catalog.h.svn-base
dmlite/tags/dmlite_0_4_0/src/core/dummy/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_0/src/core/dummy/.svn/text-base/: DummyCatalog.cpp.svn-base
dmlite/tags/dmlite_0_4_0/src/utils/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_0/src/utils/.svn/text-base/: Security.cpp.svn-base
dmlite/tags/dmlite_0_4_1/: CMakeLists.txt  Doxyfile-man.in  README
dmlite/tags/dmlite_0_4_1/.svn/: all-wcprops  dir-prop-base  entries
dmlite/tags/dmlite_0_4_1/cmake/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/cmake/modules/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/etc/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/etc/.svn/text-base/: CMakeLists.txt.svn-base
dmlite/tags/dmlite_0_4_1/include/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/include/dmlite/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/include/dmlite/c/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/include/dmlite/c/.svn/text-base/: inode.h.svn-base
dmlite/tags/dmlite_0_4_1/include/dmlite/common/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/include/dmlite/common/.svn/text-base/: config.h.cmake.svn-base  errno.h.svn-base
dmlite/tags/dmlite_0_4_1/include/dmlite/cpp/: catalog.h  pooldriver.h
dmlite/tags/dmlite_0_4_1/include/dmlite/cpp/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/include/dmlite/cpp/.svn/text-base/: authn.h.svn-base  dmlite.h.svn-base  exceptions.h.svn-base
dmlite/tags/dmlite_0_4_1/include/dmlite/cpp/dummy/: DummyPool.h
dmlite/tags/dmlite_0_4_1/include/dmlite/cpp/dummy/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/include/dmlite/cpp/utils/: extensible.h  urls.h
dmlite/tags/dmlite_0_4_1/include/dmlite/cpp/utils/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/src/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/src/c/: Any-C.cpp  Inode-C.cpp  Pool-C.cpp  Utils-C.cpp
dmlite/tags/dmlite_0_4_1/src/c/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/src/c/.svn/text-base/: Catalog-C.cpp.svn-base  PluginManager-C.cpp.svn-base  Private.h.svn-base
dmlite/tags/dmlite_0_4_1/src/core/: Exceptions.cpp
dmlite/tags/dmlite_0_4_1/src/core/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/src/core/.svn/text-base/: Defaults.cpp.svn-base
dmlite/tags/dmlite_0_4_1/src/core/builtin/: Authn.cpp  Authn.h  Catalog.cpp
dmlite/tags/dmlite_0_4_1/src/core/builtin/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/src/core/dummy/: DummyPool.cpp
dmlite/tags/dmlite_0_4_1/src/core/dummy/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/src/utils/: CMakeLists.txt  Security.cpp
dmlite/tags/dmlite_0_4_1/src/utils/.svn/: all-wcprops  dir-prop-base  entries
dmlite/tags/dmlite_0_4_1/src/utils/.svn/text-base/: Extensible.cpp.svn-base  Urls.cpp.svn-base
dmlite/tags/dmlite_0_4_1/tests/: CMakeLists.txt
dmlite/tags/dmlite_0_4_1/tests/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/tests/c/: plugin_mock.cpp  plugin_mock.h  test-manager.c  utils.c
dmlite/tags/dmlite_0_4_1/tests/c/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/tests/c/.svn/text-base/: test-any.c.svn-base
dmlite/tags/dmlite_0_4_1/tests/cpp/: CMakeLists.txt  DpmAdapter.conf  NsAdapter.conf  test-base.h  test-chown.cpp  test-comment.cpp  test-opendir.cpp  test-poolcontainer.cpp  test-rename.cpp  test-replicas.cpp  test-stat.cpp
dmlite/tags/dmlite_0_4_1/tests/cpp/.svn/: all-wcprops  entries
dmlite/tags/dmlite_0_4_1/tests/cpp/.svn/text-base/: NsMySql.conf.svn-base  NsOracle.conf.svn-base  init-backend.cpp.svn-base  test-acls.cpp.svn-base  test-checkperm.cpp.svn-base  test-hadoop.cpp.svn-base  test-pools.cpp.svn-base  test-split_url.cpp.svn-base  test-utime.cpp.svn-base
etc/: CMakeLists.txt  Makefile  cmake_install.cmake  hdfs-ns.conf  hdfs-ns.conf.in  hdfs.conf  hdfs.conf.in
etc/.svn/: all-wcprops  entries
etc/.svn/text-base/: hdfs-io.conf.in.svn-base  hdfs-pool.conf.in.svn-base
src/: CMakeLists.txt  Hdfs.cpp  Hdfs.h  HdfsAuthn.cpp  HdfsAuthn.h  HdfsIO.cpp  HdfsNS.cpp  HdfsNS.h  HdfsPool.cpp  HdfsUtil.cpp  Makefile  Throw.cpp  cmake_install.cmake
src/.svn/: all-wcprops  entries
src/.svn/text-base/: CMakeLists.txt.svn-base  HdfsIO.cpp.svn-base  HdfsNS.cpp.svn-base  HdfsPool.cpp.svn-base
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hdfs.conf  setenv.sh  test-hdfs-io.cpp  test-hdfs.cpp
(+86 files in other folders)
